--- a/resources/sass/album.css
+++ b/resources/sass/album.css
@@ -37,3 +37,11 @@ footer p {
 }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+.photo-link {
+  overflow: hidden;
+  max-height: 350px;
+}
+.list-photo {
+  max-width: 100%;
+}
