--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,92 @@
-@import "bootstrap.min.css";
-@import "album.css";
+@font-face {
+  font-family: Gilroy;
+  src: url("/fonts/Radomir Tinkov - Gilroy-Regular.otf") format("opentype");
+}
+@font-face {
+  font-family: "Gilroy-light";
+  src: url("/fonts/Radomir Tinkov - Gilroy-Light.otf") format("opentype");
+}
+
+@import "variables.scss";
+@import "~bootstrap/scss/bootstrap.scss";
+@import "./components/heading.scss";
+
+.content {
+  background-color: #FFF1F5;
+}
+.container {
+  max-width: 50rem;
+}
+.card {
+  border: 0;
+  border-radius: 0;
+}
+.card-title {
+  color: $color-dark-red;
+  font-weight: bold;
+}
+.card-img-top {
+  border-radius: 0;
+}
+
+.btn.btn-small {
+  border-radius: 0;
+  border: 1px solid #737B81;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  color: #737B81;
+}
+
+hr {
+  border-top: 1px solid black;
+  width: 80%
+}
+
+h2 {
+  text-transform: uppercase;
+  color: $color-dark-red;
+}
+
+h3 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #67595E;
+
+  &.final {
+    font-weight: bold;
+  }
+}
+
+.debater-preview {
+  & .preview-title {
+    font-size: 2rem;
+    color: white;
+    font-weight: bold;
+  }
+  & .col-left {
+    background-color: #E67998;
+  }
+  & .col-right {
+    background-color: white;
+  }
+  & h6 {
+    font-size: 1.8rem;
+  }
+  & p {
+    border-left: 1px solid black;
+    padding-left: 0.9rem;
+    margin-left: 0.7rem;
+  }
+}
+.grid {
+  display: grid;
+
+  grid-template-columns: repeat(1, 1fr);
+
+  @media (min-width: 576px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
