--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -64,7 +64,8 @@ h3 {
     font-weight: bold;
   }
   & .col-left {
-    background-color: #E67998;
+    background-image: url("/img/bg_pink.png");
+    background-size: cover;
   }
   & .col-right {
     background-color: white;
