--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -89,6 +89,9 @@ h3 {
   }
   @media (min-width: 768px) {
     grid-template-columns: repeat(4, 1fr);
+    &.final {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
 
@@ -98,10 +101,10 @@ h3 {
   margin-bottom: 5rem;
 
   @media (min-width: 576px) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
   @media (min-width: 768px) {
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(7, 1fr);
   }
 
   column-gap: 4rem;
