timetable show today by default + fix background position in detailed view

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10563,6 +10563,7 @@ h3.final {
 .debater-preview .col-left {
   background-image: url("/img/bg_pink.png");
   background-size: cover;
+  background-position: bottom;
 }
 
 .debater-preview .col-right {
