--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -66,6 +66,7 @@ h3 {
   & .col-left {
     background-image: url("/img/bg_pink.png");
     background-size: cover;
+    background-position: bottom;
   }
   & .col-right {
     background-color: white;
