--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10554,6 +10554,10 @@ h3.final {
   font-weight: bold;
 }
 
+h5 {
+  font-size: 1.18rem;
+}
+
 .debater-preview .preview-title {
   font-size: 2rem;
   color: white;
