--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,7 +56,9 @@ h3 {
     font-weight: bold;
   }
 }
-
+h5 {
+  font-size: 1.18rem;
+}
 .debater-preview {
   & .preview-title {
     font-size: 2rem;
