--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -135,3 +135,14 @@ h5 {
     }
   }
 }
+
+.footer {
+  padding-top: 15px;
+  padding-bottom: 1px;
+
+  & p {
+    color: white;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+  }
+}
