--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -121,6 +121,11 @@ h5 {
   column-gap: 1rem;
   row-gap: 2.5rem;
 
+  & .final {
+    grid-column-start: 1;
+    grid-column-end: 8;
+  }
+
   & div {
     border-radius: 0.5rem;
     font-size: 2.25rem;
